--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ask me</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}"/>
   </head>
   <body>
     <div id="root">
